Closed Bug 1580192 Opened 6 years ago Closed 6 years ago

Incorrect error check calculating debugger sweep group edges

Categories

(Core :: JavaScript: GC, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Sadly I got the condition the wrong way round in DebugAPI::findSweepGroupEdges in bug bug 1564178.

While this is annoying, I don't think it lead to us getting anything wrong. Rather, grouping zones for sweeping would fail when the debugger was in use and we would fall back to sweeping all zones in one group. So this might have contributed to more jank while collecting when the debugger was in use.

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/06f990600389 Fix error check in calculating debugger sweep group edges r=sfink
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: