Bug 1580192 - Fix error check in calculating debugger sweep group edges r=sfink

Differential Revision: https://phabricator.services.mozilla.com/D45386